Initial commit for Spring Boot project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 external.api.url=https://run.mocky.io/v3/65a7dcba-6d08-4041-b0b6-b8a62fd7e71d
 #security.basic.enabled=false
-spring.security.user.name=hi
-spring.security.user.password=hi
+#spring.security.user.name=hi
+#spring.security.user.password=hi
